--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,37 +2,51 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.1"
+    compileSdkVersion 23
+    buildToolsVersion '23.0.2'
 
-  defaultConfig {
-    applicationId "com.example.sam_chordas.stockhawk"
-    minSdkVersion 15
-    targetSdkVersion 23
-    versionCode 1
-    versionName "1.0"
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    defaultConfig {
+        applicationId "com.example.sam_chordas.stockhawk"
+        minSdkVersion 16
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
+//        jackOptions {
+//            enabled true
+//        }
     }
-  }
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+//    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
 }
 
 repositories {
-  maven { url "https://jitpack.io" }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
-
-  compile 'com.google.android.gms:play-services-gcm:8.4.0'
-  compile 'com.squareup.okhttp:okhttp:2.5.0'
-  apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
-  compile 'net.simonvt.schematic:schematic:0.6.3'
-  compile 'com.melnykov:floatingactionbutton:1.2.0'
-  compile 'com.android.support:design:23.1.1'
-  compile('com.afollestad.material-dialogs:core:0.8.4.2@aar') {
-    transitive = true
-  }
+    apt 'net.simonvt.schematic:schematic-compiler:0.6.3'
+    compile('com.afollestad.material-dialogs:core:0.8.4.2@aar') {
+        transitive = true
+    }
+    compile project(':api')
+    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'net.simonvt.schematic:schematic:0.6.3'
+    compile 'com.melnykov:floatingactionbutton:1.2.0'
+    compile 'com.android.support:design:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
+    compile 'com.diogobernardino:williamchart:2.2'
+    //    compile 'com.github.lecho:hellocharts-android:v1.5.8'
+    //    compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
+    compile 'org.apache.commons:commons-math3:3.6'
 }
