--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,16 +37,17 @@ dependencies {
         transitive = true
     }
     compile project(':api')
+
     compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'net.simonvt.schematic:schematic:0.6.3'
     compile 'com.melnykov:floatingactionbutton:1.2.0'
-    compile 'com.android.support:design:23.0.1'
-    compile 'com.android.support:cardview-v7:23.0.1'
+//    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:design:23.3.0'
     compile 'com.diogobernardino:williamchart:2.2'
-    //    compile 'com.github.lecho:hellocharts-android:v1.5.8'
-    //    compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
     compile 'org.apache.commons:commons-math3:3.6'
+//    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
 }
